Changelog
=========

3.14 (unreleased)
-----------------

- Updated the sample templates to use Bootstrap 5 (previously used Bootstrap 3).


3.13 (2020-09-03)
-----------------

- Checked compatibility with Django 3.1.
- Apply crop/effect changes to existing images (#210).
- Encoding objects before hashing error	(#205).

3.12 (2020-07-30)
-----------------

- Drop alpha channel only on jpeg save (contributed by drazen)
- Added zh_Hans translation	(contributed by Lessica)
- improved Dutch translations (contributed by andreas.milants)

3.11 (2019-12-13)
-----------------

- Added support for Django 3.
- Dropped support for Python 2, python 3.4 and Django 2.1.


3.10 (2019-08-29)
-----------------

- Compatibility with Django 2.2.


3.9 (2019-04-21)
----------------

- Fixes when file doesn't exist in the file system but still is in S3.
- Doc tweaks - and added a page on how to actually use Photologue!
- Make setup compatible with latest version of pip.
- Checked compatibility with Django 2.1 and Python 3.7.
- Updated translations for Catalan and Basque.
- Missed a Django migration (issue #194).
- Test Tox; integrate with Travis and Coveralls.
- Removed old code (old-style demo templates that have been deprecated since 2014).
- Removed old code (old views that have been deprecated since 2014).
- Removed all references to PIL (which hasn't been updated since 2009). I think that by now
  there are no servers left anywhere in the world that still use it :-)

3.8.1 (2017-12-03)
------------------

- Admin thumbnails were not displaying correctly.


3.8 (2017-12-03)
----------------

- Added support for Django 2.0.
- Dropped support for Django 1.8 and 1.10.
- Did not really work with Django 1.11 - sortedm2m library was broken. Upgraded sortedm2m and it now works with 1.11.
- New translation for Ukrainian; updated translation for Spanish.
- Fixed template tag that was broken in Django 1.11.

3.7 (2017-05-10)
----------------
