@@ -1,0 +1,6 @@
+from django.apps import AppConfig
+
+
+class PhotologueConfig(AppConfig):
+    default_auto_field = 'django.db.models.AutoField'
+    name = 'photologue'
