@@ -2,5 +2,5 @@
 # so can be removed from this file.
 # django>=1.11
 Pillow>=6.0.0
-django-sortedm2m>=3.0.0
+django-sortedm2m>=3.1.1
 ExifRead>=2.1.2
