@@ -6,14 +6,14 @@
 [tox]
 envlist =
     py{35,36,37}-django22
-    py{36,37,38}-django30
-    py{36,37,38}-django31
+    py{36,37,38,39}-django31
+    py{36,37,38,39}-django32
 
 [testenv]
 deps =
-    django22: Django>=2.2,<3.0
-    django30: Django>=3.0,<3.1
+    django22: Django>=2.2,<2.3
     django31: Django>=3.1,<3.2
+    django32: Django>=3.2,<4.0
     -r{toxinidir}/example_project/requirements.txt
 changedir =
     {toxinidir}/example_project/
@@ -26,3 +26,4 @@ python =
     3.6: py36
     3.7: py37
     3.8: py38
+    3.9: py39
